--- a/css/wtf-teach.css
+++ b/css/wtf-teach.css
@@ -1,52 +1,10 @@
 /* custom environments */
 
-.your-turn {
-  padding: 1em 1em 1em 4em;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  border: 1pt solid #a8a8a8;
-  background: #ffffff 5px center/3em no-repeat;
-  background-image: url("your-turn.png");
-}
-.your-turn:before {
-  content: "Application exercise: ";
-  clear: right;
-  display: block;
-  font-weight: bold;
-  color: #80D4E6;
-}
-
-.slide-deck {
-  padding: 1em 1em 1em 4em;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  border: 1pt solid #80D4E6;
-  background: #ffffff 5px center/3em no-repeat;
-  background-image: url("slide-deck.png");
-}
-
-.guest-lecture {
-  padding: 1em 1em 1em 4em;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  border: 1pt dotted #a8a8a8;
-  background: #ffffff 5px center/3em no-repeat;
-  background-image: url("microphone.png");
-}
-
-.tutorial{
-  padding: 1em 1em 1em 4em;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  border: 1pt solid #d8d8d8;
-  background: #ffffff 5px center/3em no-repeat;
-  background-image: url("tutorial.png");
-}
-
 .rstudio-cloud {
   padding: 1em 1em 1em 4em;
   margin-bottom: 5px;
   margin-left: 5px;
+  border: 1pt solid #a8a8a8;
   background: #ffffff 5px center/3em no-repeat;
   background-image: url("cloud.png");
 }
@@ -55,7 +13,7 @@
   clear: right;
   display: block;
   font-weight: bold;
-  color: #A7D5E8;
+  color: #5286C2;
 }
 
 /* overwrite bs4_book style */
