A bit more slide css

--- a/materials/xaringan-themer.css
+++ b/materials/xaringan-themer.css
@@ -47,7 +47,7 @@
   --background-color: #FFFFFF;
   --link-color: #2c4673;
   --text-bold-color: #2c4673;
-  --code-highlight-color: #c6d7eb;
+  --code-highlight-color: #e9765a50;
   --inverse-text-color: #FFFFFF;
   --inverse-background-color: #2c4673;
   --inverse-header-color: #FFFFFF;
