--- a/css/wtf-teach.css
+++ b/css/wtf-teach.css
@@ -25,6 +25,23 @@
   background-image: url("icons8-documentary-100.png");
 }
 
+.reading {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  background: #ffffff 5px center/3em no-repeat;
+  background-image: url("icons8-study-100.png");
+}
+
+.package {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  background: #ffffff 5px center/3em no-repeat;
+  background-image: url("icons8-box-100.png");
+}
+
+
 /* overwrite bs4_book style */
 
 img.cover {
