--- a/css/wtf-teach.css
+++ b/css/wtf-teach.css
@@ -26,6 +26,7 @@
   padding: 1em 1em 1em 4em;
   font-size: 16px;
   color: #777;
+  border: 1pt solid #a8a8a8;
   margin-bottom: 5px;
   margin-left: 5px;
   background: #ffffff 5px center/3em no-repeat;
